--- a/.github/workflows/deply.yml
+++ b/.github/workflows/deply.yml
@@ -27,9 +27,9 @@ jobs:
       - name: Publish
         run: dotnet publish -c Release -o ./publish
 
-      # - name: Deploy to Azure Web App
-      #   uses: azure/webapps-deploy@v2
-      #   with:
-      #     app-name: hangul-api-lucy-j-dev
-      #     publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-      #     package: ./publish
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: hangul-api-lucy-j-dev
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: ./publish
