--- a/.github/workflows/deply.yml
+++ b/.github/workflows/deply.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Publish
         run: dotnet publish -c Release -o ./publish
 
+      - name: List published files
+        run: ls -R ./publish
+
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
