--- a/HangulApi/appsettings.json
+++ b/HangulApi/appsettings.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "Server=127.0.0.1;Database=hangul-db;User Id=sa;Password=admin123!;MultipleActiveResultSets=true;TrustServerCertificate=true"
   },
   "AzureBlobStorage": {
-    "ConnectionString": "",
+    "ConnectionString": "DefaultEndpointsProtocol=https;AccountName=yourstorageaccount;AccountKey=youraccountkey;EndpointSuffix=core.windows.net",
     "ContainerName": "hangul"
   },
   "Logging": {
