Actualizacion cadena de conexion en app settings

--- a/HangulApi/appsettings.json
+++ b/HangulApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Database=hangul-db;User Id=sa;Password=admin123!;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "DefaultConnection": ""
   },
   "AzureBlobStorage": {
     "ConnectionString": "DefaultEndpointsProtocol=https;AccountName=yourstorageaccount;AccountKey=youraccountkey;EndpointSuffix=core.windows.net",
