Modificar cadena de conexion

--- a/HangulApi/appsettings.json
+++ b/HangulApi/appsettings.json
@@ -1,7 +1,5 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": ""
-  },
+  "DefaultConnection": "",
   "AzureBlobStorage": {
     "ConnectionString": "DefaultEndpointsProtocol=https;AccountName=yourstorageaccount;AccountKey=youraccountkey;EndpointSuffix=core.windows.net",
     "ContainerName": "hangul"
